--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "hjs-dev-server",
     "test": "standard",
     "build": "webpack",
-    "deploy": "npm run build && surge -p public -d participedia.xyz"
+    "deploy": "NODE_ENV=production npm run build && surge -p public -d participedia.xyz"
   },
   "author": "",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "elasticsearch": "^11.0.1",
     "file-loader": "^0.9.0",
     "hjs-webpack": "^8.3.0",
+    "json": "^9.0.4",
     "json-loader": "^0.5.4",
     "jwt-decode": "^2.0.1",
     "leaflet": "^0.7.7",
@@ -28,6 +29,7 @@
     "material-ui": "^0.15.2",
     "packageify": "^0.2.3",
     "postcss-loader": "^0.9.1",
+    "query-string": "^4.2.2",
     "react": "^15.2.1",
     "react-css-modules": "^3.7.7",
     "react-dom": "^15.2.1",
@@ -48,10 +50,17 @@
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.7"
   },
+  "node": {
+    "console": true,
+    "fs": "empty",
+    "net": "empty",
+    "tls": "empty"
+  },
   "devDependencies": {
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "json-loader": "^0.5.4"
   }
 }
