localization is in, one string is translated in one locale ;-)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,13 @@
 {
-"env": {
+    "env": {
         "browser": true,
         "node": true,
         "es6": true,
         "jest": true,
         "jquery": true
+    },
+    "globals": {
+        "fetch": true
     },
     "parser": "babel-eslint",
     "parserOptions": {
