--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
   "scripts": {
     "start": "hjs-dev-server",
     "test": "standard",
-    "build": "webpack",
+    "postinstall": "npm-run-all build:*",
+    "build:js": "webpack",
+    "build:l10njson": "node scripts/properties2json",
     "deploy": "NODE_ENV=production npm run build && surge -p public -d participedia.xyz"
+  },
+  "standard": {
+    "globals": [
+      "fetch",
+      "__API_URL__",
+      "__AUTH0_CLIENT_ID__",
+      "__AUTH0_DOMAIN__"
+    ]
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "accept-language-parser": "^1.1.2",
     "auth0-lock": "^9.2.1",
+    "bestlang": "0.0.1",
     "bodybuilder": "^1.11.0",
     "brfs": "^1.4.3",
     "css-loader": "^0.23.1",
@@ -24,17 +36,21 @@
     "json": "^9.0.4",
     "json-loader": "^0.5.4",
     "jwt-decode": "^2.0.1",
+    "langmap": "0.0.13",
     "leaflet": "^0.7.7",
     "less": "^2.7.1",
     "material-ui": "^0.15.2",
     "packageify": "^0.2.3",
     "postcss-loader": "^0.9.1",
+    "properties-parser": "^0.3.1",
+    "q-io": "^1.13.2",
     "query-string": "^4.2.2",
     "react": "^15.2.1",
     "react-css-modules": "^3.7.7",
     "react-dom": "^15.2.1",
     "react-form": "0.0.2",
     "react-hot-loader": "^1.3.0",
+    "react-intl": "^2.1.3",
     "react-leaflet": "^0.12.1",
     "react-leaflet-choropleth": "github:liveby/react-leaflet-choropleth",
     "react-redux": "^4.4.5",
@@ -48,7 +64,8 @@
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "transform-loader": "^0.2.3",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "whatwg-fetch": "^1.0.0"
   },
   "node": {
     "console": true,
@@ -61,6 +78,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4"
   }
 }
