--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "hjs-dev-server",
     "test": "standard",
-    "postinstall": "npm run build:*",
+    "postinstall": "npm run build:l10njson && npm run build:js",
     "build:js": "webpack",
     "build:l10njson": "node scripts/properties2json",
     "deploy": "NODE_ENV=production npm run build:* && surge -p public -d participedia.xyz"
@@ -32,7 +32,9 @@
     "ejsify": "^1.0.0",
     "elasticsearch": "^11.0.1",
     "file-loader": "^0.9.0",
+    "habitat": "^3.1.2",
     "hjs-webpack": "^8.3.0",
+    "hoek": "^4.0.2",
     "json": "^9.0.4",
     "json-loader": "^0.5.4",
     "jwt-decode": "^2.0.1",
