adding sass loading

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "leaflet": "^0.7.7",
     "less": "^2.7.1",
     "material-ui": "^0.15.2",
+    "node-sass": "^3.8.0",
     "packageify": "^0.2.3",
     "postcss-loader": "^0.9.1",
     "properties-parser": "^0.3.1",
@@ -64,6 +65,8 @@
     "redux-storage": "^4.0.1",
     "redux-storage-engine-localstorage": "^1.1.1",
     "redux-thunk": "^2.1.0",
+    "resolve-url": "^0.2.1",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "transform-loader": "^0.2.3",
     "url-loader": "^0.5.7",
