--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-css-modules": "^3.7.7",
     "react-dom": "^15.2.1",
     "react-form": "0.0.2",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^3.0.0-beta.2",
     "react-intl": "^2.1.3",
     "react-leaflet": "^0.12.1",
     "react-leaflet-choropleth": "github:liveby/react-leaflet-choropleth",
