--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
 	// for the documentation about the jsconfig.json format
 	"compilerOptions": {
 		"target": "es6",
-		"module": "commonjs",
+		"module": "es6",
+		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true
 	},
 	"exclude": [
