--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "leaflet": "^0.7.7",
     "less": "^2.7.1",
     "material-ui": "^0.15.3",
+    "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "packageify": "^0.2.3",
     "postcss-loader": "^0.9.1",
@@ -81,12 +82,17 @@
     "tls": "empty"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.5.0",
+    "eslint-plugin-react": "^6.2.0",
     "exports-loader": "^0.6.3",
+    "fsevents": "^1.0.14",
     "imports-loader": "^0.6.5",
+    "jest-cli": "^15.1.1",
     "json-loader": "^0.5.4"
   }
 }
