--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "accept-language-parser": "^1.1.2",
     "auth0-lock": "^9.2.1",
+    "babel-eslint": "^6.1.2",
     "babel-preset-react-hmre": "^1.1.1",
     "bestlang": "0.0.1",
     "bodybuilder": "^1.11.0",
@@ -43,7 +44,7 @@
     "langmap": "0.0.13",
     "leaflet": "^0.7.7",
     "less": "^2.7.1",
-    "material-ui": "^0.15.3",
+    "material-ui": "^0.15.4",
     "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "packageify": "^0.2.3",
@@ -51,6 +52,7 @@
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
     "query-string": "^4.2.2",
+    "quill": "^1.0.6",
     "react": "^15.2.1",
     "react-css-modules": "^3.7.7",
     "react-dom": "^15.2.1",
@@ -59,11 +61,14 @@
     "react-intl": "^2.1.3",
     "react-leaflet": "^0.12.1",
     "react-leaflet-choropleth": "github:liveby/react-leaflet-choropleth",
+    "react-quill": "^0.4.1",
     "react-redux": "^4.4.5",
+    "react-redux-form": "^0.14.5",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-form": "^5.3.1",
+    "redux-form": "^6.0.2",
+    "redux-form-material-ui": "^4.0.1",
     "redux-logger": "^2.6.1",
     "redux-storage": "^4.0.1",
     "redux-storage-engine-localstorage": "^1.1.1",
