Fix some linting warnings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,12 @@
     "plugins": [
         "react"
     ],
+    "globals": {
+        "React": true
+    },
     "rules": {
+        "react/jsx-uses-vars": [2],
+        "no-console":0,
         "indent": [
             "error",
             2
