--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "react-intl": "^2.1.3",
     "react-leaflet": "^0.12.1",
     "react-leaflet-choropleth": "github:liveby/react-leaflet-choropleth",
-    "react-quill": "^0.4.1",
+    "react-quill": "github:zenoamaro/react-quill",
     "react-redux": "^4.4.5",
-    "react-redux-form": "^0.14.5",
+    "react-redux-form": "^1.0.6",
     "react-router": "^2.5.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
