fix some config / README bugs

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "eslint-plugin-react": "^6.4.1",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.1",
+    "material-ui": "^0.15.4",
     "moment": "^2.15.1",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
+    "query-string": "^4.2.3",
     "quill": "github:quilljs/quill#d107d8122363e97f7792bcad040b33a1fbe10cf7",
-    "material-ui": "^0.15.4",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2", 
+    "react-dom": "^15.3.2",
     "react-intl": "^2.1.5",
     "react-leaflet": "^0.12.3",
     "react-leaflet-choropleth": "^1.1.0",
