--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "concurrently": "^3.1.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.4.1",
+    "geojson-extent": "^0.3.2",
+    "geojson2svg": "^1.0.3",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.1",
     "material-ui": "^0.15.4",
