--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["es2015", "stage-0", "react", "stage-2"],
   "env": {
     "development": {
-      "presets": ["react-hmre"]
+      "presets": ["react-hmre", "transform-object-rest-spread", "transform-es2015-destructuring"]
     }
   }
 }
