--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "auth0": "^2.5.0",
+    "auth0-js": "^7.3.0",
     "auth0-lock": "^10.4.0",
     "babel-eslint": "^5.0.4",
     "babel-plugin-transform-es2015-destructuring": "^6.18.0",
@@ -28,6 +30,7 @@
     "quill": "github:quilljs/quill#d107d8122363e97f7792bcad040b33a1fbe10cf7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-dropzone-s3-uploader": "github:davidascher/react-dropzone-s3-uploader",
     "react-intl": "^2.1.5",
     "react-leaflet": "^0.12.3",
     "react-leaflet-choropleth": "^1.1.0",
