--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,4 @@ REACT_APP_AUTH0_DOMAIN=participedia.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=lORPmEONgX2K71SX7fk35X5PNZOCaSfU
 #REACT_APP_API_URL = "https://api.participedia.xyz"
 REACT_APP_API_URL = "http://localhost:3001"
+REACT_APP_UPLOADS_S3_BUCKET = "http://uploads.participedia.xyz.s3-website-us-east-1.amazonaws.com"
