--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 {
   "files.exclude": {
     "build/**": true,
-    "**/*.css.map": true
+    "src/**/*.css": true,
+    "src/**/*.css.map": true
   }
 }
