--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "auth0": "^2.5.0",
     "auth0-js": "^7.3.0",
     "auth0-lock": "^10.4.0",
+    "bootstrap": "^4.0.0-alpha.4",
     "concurrently": "^3.1.0",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.0.3",
@@ -21,7 +22,9 @@
     "query-string": "^4.2.3",
     "quill": "github:quilljs/quill#d107d8122363e97f7792bcad040b33a1fbe10cf7",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
+    "react-addons-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-dropzone-s3-uploader": "github:davidascher/react-dropzone-s3-uploader",
     "react-geosuggest": "^2.0.0",
@@ -33,6 +36,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0",
+    "reactstrap": "^3.8.1",
     "redux": "^3.6.0",
     "redux-form": "^6.1.0",
     "redux-form-material-ui": "^4.1.0",
