Upgrade a few dependencies. Fix a fetch syntax error; Lint cleanups;

--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.0.3",
     "jwt-decode": "^2.1.0",
-    "leaflet": "^1.0.1",
-    "material-ui": "^0.15.4",
+    "leaflet": "^1.0.2",
+    "material-ui": "^0.16.4",
     "moment": "^2.15.1",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
     "query-string": "^4.2.3",
-    "quill": "github:quilljs/quill#d107d8122363e97f7792bcad040b33a1fbe10cf7",
-    "react": "^15.3.2",
+    "quill": "^1.1.6",
+    "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-dropzone-s3-uploader": "github:davidascher/react-dropzone-s3-uploader",
+    "react-dom": "^15.4.1",
+    "react-dropzone-s3-uploader": "^0.8.1",
     "react-geosuggest": "^2.0.0",
     "react-intl": "^2.1.5",
-    "react-leaflet": "^0.12.3",
-    "react-leaflet-choropleth": "^1.1.0",
+    "react-leaflet": "^1.0.1",
+    "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
     "react-prevent-default": "^1.0.0",
     "react-quill": "github:davidascher/react-quill#386edf514b0f7cee4a247d9d4ade5b52823712dc",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "reactstrap": "^3.8.1",
     "redux": "^3.6.0",
     "redux-form": "^6.1.0",
