--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.7.0"
+    "auth0-js": "^7.6.1",
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "enzyme": "^2.7.1",
+    "jest": "^18.1.0",
+    "react-addons-test-utils": "^15.4.2",
+    "react-scripts": "0.7.0",
+    "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
     "auth0": "^2.5.0",
@@ -54,7 +63,7 @@
     "deploy": "node scripts/properties2json && surge -p build -d participedia.xyz",
     "deploysam": "rm -f build/CNAME && rm -f build/CORS && node scripts/properties2json && surge -p build -d participedia-sam.surge.sh",
     "build": "sass --update src && react-scripts build && cp build/index.html build/200.html",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "lint": "eslint src",
     "eject": "react-scripts eject"
   }
