--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "enzyme": "^2.7.1",
     "jest": "^18.1.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.7.0",
+    "react-scripts": "0.9.3",
     "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
@@ -20,11 +20,13 @@
     "auth0-lock": "^10.4.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
+    "bluebird": "^3.4.7",
     "bootstrap": "4.0.0-alpha.5",
     "concurrently": "^3.1.0",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.0.3",
     "habitat": "^3.1.2",
+    "jest-cli": "^19.0.2",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.2",
     "material-ui": "^0.16.4",
@@ -55,8 +57,7 @@
     "redux-logger": "^2.7.0",
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
-    "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^1.0.0"
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
