--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "bluebird": "^3.4.7",
     "bootstrap": "4.0.0-alpha.5",
     "concurrently": "^3.1.0",
+    "es6-promise": "^4.0.5",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.0.3",
     "habitat": "^3.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "jest-cli": "^19.0.2",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.2",
