let's try deploying frontend from travis.

--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
   },
   "scripts": {
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
-    "deploy": "node scripts/properties2json && surge -p build -d participedia.xyz",
+    "deploy": "surge -p build -d participedia.xyz",
     "deploysam": "rm -f build/CNAME && rm -f build/CORS && node scripts/properties2json && surge -p build -d participedia-sam.surge.sh",
-    "build": "sass --update src && react-scripts build && cp build/index.html build/200.html",
+    "build": "sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint src",
     "eject": "react-scripts eject"
