--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "auth0-js": "^8.3.0",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
@@ -16,7 +15,7 @@
   },
   "dependencies": {
     "auth0": "^2.5.0",
-    "auth0-js": "^8.3.0",
+    "auth0-js": "^7.6.1",
     "auth0-lock": "^10.4.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -44,7 +43,7 @@
     "react-leaflet": "^1.0.1",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
     "react-prevent-default": "^1.0.0",
-    "react-quill": "^0.4.1",
+    "react-quill": "^1.0.0-beta-1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
