--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-preset-stage-0": "^6.22.0",
     "enzyme": "^2.7.1",
     "jest": "^18.0.0",
+    "lint-staged": "^3.3.1",
+    "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.9.3",
     "react-test-renderer": "^15.4.2"
@@ -28,6 +30,7 @@
     "leaflet": "^1.0.2",
     "material-ui": "^0.17.0",
     "moment": "^2.15.1",
+    "prettier": "^0.21.0",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
     "query-string": "^4.2.3",
@@ -63,7 +66,15 @@
     "deploysam": "rm -f build/CNAME && rm -f build/CORS && node scripts/properties2json && surge -p build -d participedia-sam.surge.sh",
     "build": "sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint src",
+    "lint": "prettier",
+    "lint-staged": "prettier --write",
     "eject": "react-scripts eject"
-  }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "pre-commit": "lint:staged"
 }
