--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,47 +1,27 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "installedESLint": true,
-    "parser": "babel-eslint",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        },
-        "sourceType": "module",
-        "allowImportExportEverywhere": true
-    },
-    "plugins": [
-        "react"
-    ],
-    "globals": {
-        "React": true
-    },
-    "rules": {
-        "react/jsx-uses-vars": [2],
-        "no-console":0,
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ]
-    },
-    "compilerOptions": { 
-        "target": "ES6", "module": "commonjs" 
-    } 
+  "extends": [
+    "google",
+    "plugin:react/recommended",
+    "prettier",
+    "prettier/react"
+  ],
+  "plugins": [
+    "flowtype",
+    "react",
+    "prettier"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2016,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
-
