fix lint command

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "deploysam": "rm -f build/CNAME && rm -f build/CORS && node scripts/properties2json && surge -p build -d participedia-sam.surge.sh",
     "build": "sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json",
     "test": "react-scripts test --env=jsdom",
-    "lint": "eslint 'src/**.js'",
+    "lint": "eslint \"src/**/**.js\"",
     "lint-staged": "prettier --write",
     "eject": "react-scripts eject"
   },
