--- a/sample.env
+++ b/sample.env
@@ -6,4 +6,5 @@ REACT_APP_API_URL = "http://localhost:3001"
 REACT_APP_UPLOADS_S3_BUCKET = "http://uploads.participedia.xyz.s3-website-us-east-1.amazonaws.com"
 REACT_APP_GOOGLE_MAPS_API=AIzaSyBKcBsz5hg6eQA6iyrogeAKFPfiYiG3iTo
 REACT_APP_ASSETS_URL=https://d3im063erkq9w4.cloudfront.net/
+REACT_APP_UPLOADS_CDN_URL=https://detetf146kq8c.cloudfront.net/
 
