--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+  "eslint.autoFixOnSave": true,
   "files.exclude": {
     "build/**": true,
     "src/**/*.css": true,
