--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "habitat": "^3.1.2",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.2",
+    "leaflet-sleep": "^0.5.1",
     "material-ui": "^0.17.0",
     "moment": "^2.15.1",
     "prettier": "^0.21.0",
