working on images on Case and CaseEditor

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^15.4.1",
     "react-dropzone-s3-uploader": "^0.10.0",
     "react-geosuggest": "^2.0.0",
+    "react-image-gallery": "^0.7.13",
     "react-intl": "^2.1.5",
     "react-leaflet": "^1.0.1",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
