--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-addons-transition-group": "^15.3.2",
     "react-dom": "^15.4.1",
     "react-dropzone-s3-uploader": "^0.10.0",
+    "react-form": "^1.2.6",
     "react-geosuggest": "^2.0.0",
     "react-intl": "^2.1.5",
     "react-leaflet": "^1.0.1",
