--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-addons-shallow-compare": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
     "react-dom": "^15.4.1",
+    "react-dropzone": "^3.12.2",
     "react-form": "^1.2.6",
     "react-geosuggest": "^2.0.0",
     "react-image-gallery": "^0.7.13",
