--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
     "redux-thunk": "^2.1.0",
-    "whatwg-fetch": "^2.0.3",
-    "winston": "^2.3.1"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
