Trying to deploy on PRs for review

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
     "redux-thunk": "^2.1.0",
+    "surge-review": "^1.0.1",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
