--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
     "redux-thunk": "^2.1.0",
+    "surge": "^0.19.0",
     "surge-review": "^1.0.1",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
     "deploy": "surge -p build -d participedia.xyz",
+    "deployreview": "surge-review -p ./build",
     "deploysam": "rm -f build/CNAME && rm -f build/CORS && node scripts/properties2json && surge -p build -d participedia-sam.surge.sh",
     "build": "sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json",
     "test": "react-scripts test --env=jsdom",
