--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
 - echo "    login $SURGE_LOGIN" >> ~/.netrc
 - echo "    password $SURGE_TOKEN" >> ~/.netrc
 - npm install surge surge-review 
-- if [ "$TRAVIS_PULL_REQUEST_BRANCH" ]; then npm run deployreview || true; fi
+- if [ "$TRAVIS_PULL_REQUEST_BRANCH" ]; then npm run deployreview; fi
 deploy:
   skip_cleanup: true
   provider: surge
