added video player, need instructions for placement

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-leaflet": "^1.1.6",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
     "react-onscroll": "^1.0.4",
+    "react-player": "^0.14.3",
     "react-prevent-default": "^1.0.0",
     "react-quill": "^1.0.0-beta-1",
     "react-redux": "^5.0.4",
