--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-intl": "^2.1.5",
     "react-leaflet": "^1.0.1",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
+    "react-player": "^0.14.3",
     "react-prevent-default": "^1.0.0",
     "react-quill": "^1.0.0-beta-1",
     "react-redux": "^5.0.3",
