--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "material-ui": "^0.17.0",
     "material-ui-chip-input": "^0.13.1",
     "moment": "^2.15.1",
+    "object-omit": "^1.0.0",
     "prettier": "^0.22.0",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
