--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.0.3",
     "habitat": "^3.1.2",
+    "html-to-text": "^3.2.0",
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.3",
     "leaflet-sleep": "^0.5.1",
@@ -70,6 +71,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-s3-uploader": "^4.0.3",
+    "react-share": "^1.13.0",
     "react-tap-event-plugin": "^2.0.1",
     "reactstrap": "^4.2.0",
     "redux": "^3.6.0",
