--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.15.1",
     "object-omit": "^1.0.0",
     "prettier": "^0.22.0",
+    "prop-types": "^15.5.6",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
     "query-string": "^4.2.3",
