--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "redux-storage": "^4.1.1",
     "redux-storage-engine-localstorage": "^1.1.2",
     "redux-thunk": "^2.1.0",
+    "simple-react-form": "^1.9.1",
+    "simple-react-form-material-ui": "^1.7.8",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
