--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-addons-test-utils": "^15.5.1",
     "react-router-dom": "^4.1.1",
     "react-scripts": "0.9.5",
-    "react-test-renderer": "^15.5.4"
+    "react-test-renderer": "^15.5.4",
+    "source-map-explorer": "^1.3.3"
   },
   "dependencies": {
     "auth0": "^2.6.0",
@@ -41,7 +42,6 @@
     "leaflet-sleep": "^0.5.1",
     "material-ui": "^0.17.3",
     "material-ui-chip-input": "^0.13.1",
-    "moment": "^2.18.1",
     "object-omit": "^1.0.0",
     "prettier": "^0.22.0",
     "prop-types": "^15.5.8",
@@ -69,6 +69,7 @@
     "react-router-redux": "^4.0.8",
     "react-s3-uploader": "^4.0.3",
     "react-tap-event-plugin": "^2.0.1",
+    "react-timeago": "^3.2.0",
     "reactstrap": "^4.5.0",
     "redux": "^3.6.0",
     "redux-form": "^6.6.2",
@@ -89,6 +90,7 @@
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint \"src/**/**.js\"",
     "lint-staged": "prettier --write",
+    "analyze": "source-map-explorer build/static/js/main.* ",
     "eject": "react-scripts eject"
   },
   "lint-staged": {
