--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "react-prevent-default": "^1.0.0",
     "react-quill": "^1.0.0-beta-1",
     "react-redux": "^5.0.4",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.4",
     "react-s3-uploader": "^4.0.3",
     "react-share": "^1.13.0",
     "react-tap-event-plugin": "^2.0.1",
