Move Choropleth to experiments.

--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "material-ui": "^0.17.3",
     "material-ui-chip-input": "^0.13.1",
     "object-omit": "^1.0.0",
+    "parse-dms": "^0.0.3",
     "prettier": "^1.0.0",
     "prop-types": "^15.5.8",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.2",
+    "query-parser": "^0.0.1",
     "query-string": "^4.3.2",
     "quill": "^1.2.3",
     "react": "^15.5.4",
