--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jwt-decode": "^2.1.0",
     "leaflet": "^1.0.3",
     "leaflet-sleep": "^0.5.1",
+    "mapbox-gl": "^0.36.0",
     "material-ui": "^0.17.3",
     "material-ui-chip-input": "^0.13.1",
     "object-omit": "^1.0.0",
@@ -64,6 +65,7 @@
     "react-intl": "^2.2.3",
     "react-leaflet": "^1.1.6",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
+    "react-mapbox-gl": "^1.9.1",
     "react-onscroll": "^1.0.4",
     "react-player": "^0.14.3",
     "react-prevent-default": "^1.0.0",
@@ -76,6 +78,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "react-timeago": "^3.2.0",
     "reactstrap": "^4.5.0",
+    "reduce-object": "^0.1.3",
     "redux": "^3.6.0",
     "redux-form": "^6.6.2",
     "redux-form-material-ui": "^4.1.3",
