--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ deploy:
   skip_cleanup: true
   provider: surge
   project: ./build/
-  domain: participedia.xyz
+  domain: https://participedia.xyz
