--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "better-react-spinkit": "^2.0.0-6",
     "bootstrap": "4.0.0-alpha.5",
     "concurrently": "^3.4.0",
     "geojson-extent": "^0.3.2",
