--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "leaflet": "^1.0.3",
     "leaflet-sleep": "^0.5.1",
     "mapbox-gl": "^0.37.0",
-    "material-ui": "^0.17.4",
-    "material-ui-chip-input": "^0.13.5",
+    "material-ui": "^0.18.0",
+    "material-ui-chip-input": "^0.14.0",
     "object-omit": "^1.0.0",
     "parse-dms": "^0.0.3",
     "prettier": "^1.3.1",
@@ -62,13 +62,13 @@
     "react-dropzone": "^3.13.1",
     "react-form": "^1.2.7",
     "react-geosuggest": "^2.1.0",
-    "react-image-gallery": "^0.7.13",
+    "react-image-gallery": "^0.7.16",
     "react-intl": "^2.3.0",
     "react-leaflet": "^1.1.6",
     "react-leaflet-choropleth": "github:davidascher/react-leaflet-choropleth",
     "react-mapbox-gl": "^1.10.0",
     "react-onscroll": "^1.0.4",
-    "react-player": "^0.16.0",
+    "react-player": "^0.18.0",
     "react-prevent-default": "^1.0.0",
     "react-quill": "^1.0.0-beta-1",
     "react-redux": "^5.0.4",
@@ -77,7 +77,7 @@
     "react-s3-uploader": "^4.1.1",
     "react-share": "^1.13.2",
     "react-tap-event-plugin": "^2.0.1",
-    "react-timeago": "^3.3.0",
+    "react-timeago": "3.2.1",
     "reactstrap": "^4.5.0",
     "reduce-object": "^0.1.3",
     "redux": "^3.6.0",
