--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4",
-    "source-map-explorer": "^1.3.3"
+    "source-map-explorer": "^1.3.3",
+    "@storybook/react": "^3.1.2"
   },
   "dependencies": {
     "auth0": "^2.6.0",
     "auth0-js": "^8.7.0",
     "auth0-lock": "^10.16.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -86,7 +88,9 @@
     "lint": "eslint \"src/**/**.js\"",
     "lint-staged": "prettier --write",
     "analyze": "source-map-explorer build/static/js/main.* ",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
     "*.js": [
