--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["es2015", "stage-0", "react", "stage-2", "react-hmre" ],
+  "presets": [
+    "es2015",
+    "stage-0",
+    "react",
+    "stage-2",
+    "react-hmre"
+  ],
   "plugins": [
     "transform-react-jsx",
     "transform-object-rest-spread",
