--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@storybook/react": "^3.1.2",
     "babel-jest": "^20.0.3",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
@@ -22,10 +23,10 @@
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4",
-    "source-map-explorer": "^1.3.3",
-    "@storybook/react": "^3.1.2"
+    "source-map-explorer": "^1.3.3"
   },
   "dependencies": {
+    "@storybook/addon-actions": "^3.1.2",
     "auth0": "^2.6.0",
     "auth0-js": "^8.7.0",
     "auth0-lock": "^10.16.0",
@@ -89,7 +90,7 @@
     "lint-staged": "prettier --write",
     "analyze": "source-map-explorer build/static/js/main.* ",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "sass --update src && start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
