Fix tests, do some upgrades

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["es2015", "stage-0", "react", "stage-2"],
+  "plugins": [ "transform-es2015-modules-commonjs"],
   "env": {
     "development": {
       "presets": ["react-hmre", "transform-object-rest-spread", "transform-es2015-destructuring"]
