--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@storybook/react": "^3.1.2",
+    "@storybook/react": "^3.1.3",
     "babel-jest": "^20.0.3",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
@@ -16,7 +16,7 @@
     "fetch-mock": "^5.11.0",
     "jest": "^20.0.4",
     "jest-fetch-mock": "^1.1.1",
-    "lint-staged": "^3.6.0",
+    "lint-staged": "^3.6.1",
     "mock-local-storage": "^1.0.2",
     "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.5.1",
@@ -42,13 +42,14 @@
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
     "html-to-text": "^3.3.0",
+    "isomorphic-fetch": "^2.2.1",
     "jwt-decode": "^2.1.0",
     "mapbox-gl": "^0.38.0",
-    "material-ui": "^0.18.1",
+    "material-ui": "^0.18.3",
     "material-ui-chip-input": "^0.15.0",
     "object-omit": "^1.0.0",
     "parse-dms": "^0.0.3",
-    "prettier": "^1.4.2",
+    "prettier": "^1.4.4",
     "prop-types": "^15.5.10",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.4",
@@ -62,7 +63,7 @@
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.2",
     "react-form": "^1.2.8",
-    "react-geosuggest": "^2.1.0",
+    "react-geosuggest": "^2.2.0",
     "react-image-gallery": "^0.8.2",
     "react-intl": "^2.3.0",
     "react-mapbox-gl": "^1.12.0",
@@ -76,7 +77,7 @@
     "react-timeago": "3.2.1",
     "reactstrap": "^4.6.2",
     "reduce-object": "^0.1.3",
-    "simple-react-form": "^1.9.1",
+    "simple-react-form": "^1.9.0",
     "simple-react-form-material-ui": "^1.7.13",
     "whatwg-fetch": "^2.0.3"
   },
