--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "react-timeago": "3.2.1",
     "reactstrap": "^4.6.2",
     "reduce-object": "^0.1.3",
-    "simple-react-form": "^1.9.0",
+    "simple-react-form": "1.9.0",
     "simple-react-form-material-ui": "^1.7.13",
     "whatwg-fetch": "^2.0.3"
   },
