--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-geosuggest": "^2.2.0",
     "react-image-gallery": "^0.8.2",
     "react-intl": "^2.3.0",
+    "react-items-list": "^0.0.9",
     "react-mapbox-gl": "^1.12.0",
     "react-onscroll": "^1.0.4",
     "react-player": "^0.18.0",
