Adding links to the view details pages (I think, need some real data)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "src/**/*.css": true,
     "src/**/*.css.map": true
   },
-  "eslint.enable": true
+  "eslint.enable": true,
+  "editor.tabSize": 2
 }
