--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "reduce-object": "^0.1.3",
     "simple-react-form": "1.9.0",
     "simple-react-form-material-ui": "^1.7.13",
+    "store": "^2.0.4",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
