--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-player": "^0.18.0",
     "react-prevent-default": "^1.0.0",
     "react-quill": "^1.0.0-beta-1",
+    "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
     "react-share": "^1.14.1",
     "react-tap-event-plugin": "^2.0.1",
