--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@storybook/react": "^3.1.3",
     "babel-jest": "^20.0.3",
     "enzyme": "^2.8.2",
-    "eslint-config-google": "^0.9.1",
     "eslint": "^3.1.1",
+    "eslint-config-google": "^0.9.1",
     "eslint-config-prettier": "^2.1.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-prettier": "^2.1.1",
@@ -36,13 +36,14 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "better-react-spinkit": "^2.0.0-7",
-    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "concurrently": "^3.4.0",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
     "html-to-text": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "jest-cli": "^20.0.4",
     "jwt-decode": "^2.1.0",
     "line-by-line": "^0.1.5",
     "mapbox-gl": "^0.38.0",
@@ -58,11 +59,11 @@
     "query-string": "^5.0.0",
     "quill": "^1.2.5",
     "raven-js": "^3.16.0",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-shallow-compare": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.2",
     "react-form": "^1.2.8",
     "react-geosuggest": "^2.2.0",
@@ -78,7 +79,8 @@
     "react-share": "^1.14.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-timeago": "3.4.3",
-    "reactstrap": "^4.6.2",
+    "react-transition-group": "^1.2.0",
+    "reactstrap": "^4.8.0",
     "reduce-object": "^0.1.3",
     "simple-react-form": "1.9.0",
     "simple-react-form-material-ui": "^1.7.13",
