--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend3",
-  "version": "0.1.0",
+  "version": "v1.0.1",
   "private": true,
   "devDependencies": {
     "@storybook/react": "^3.1.3",
