--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "better-react-spinkit": "^2.0.0-7",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "concurrently": "^3.4.0",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
