cleaning up some warnings

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "better-react-spinkit": "^2.0.0-7",
     "bootstrap": "^4.0.0-beta",
     "concurrently": "^3.4.0",
+    "create-react-class": "^15.6.0",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
@@ -64,6 +65,7 @@
     "react-addons-shallow-compare": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.6.1",
+    "react-dom-factories": "^1.0.1",
     "react-dropzone": "^3.13.2",
     "react-form": "^1.2.8",
     "react-geosuggest": "^2.2.0",
