--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "start": "concurrently \"sass --watch src\"  \"react-scripts start\"",
     "archiveprod": "zip -r archive/prod-$(date -u +%FT%TZ) build",
     "archivestage": "zip -r archive/stage-$(date -u +%FT%TZ) build",
-    "deployprod": "surge -p build -d participedia.xyz",
+    "deployprod": "surge -p build -d https://participedia.xyz",
     "deploystage": "surge -p build -d ppedia.fun",
     "buildprod": "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
     "buildstage": "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
