--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
       "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
     "buildstage":
       "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
+    "builddev":
+      "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt",
     "rollbackto": "f(){ rm -rf build && unzip archive/${1}; }; f",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint \"src/**/**.js\"",
