--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@storybook/react": "^3.1.3",
     "babel-jest": "^20.0.3",
     "enzyme": "^2.8.2",
-    "eslint": "^3.1.1",
+    "eslint": "^4.7.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-config-prettier": "^2.1.1",
+    "eslint-config-prettier": "^2.5.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-promise": "^3.5.0",
@@ -21,7 +21,7 @@
     "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.5.1",
     "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10",
+    "react-scripts": "^1.0.13",
     "react-test-renderer": "^15.5.4",
     "source-map-explorer": "^1.3.3"
   },
@@ -52,7 +52,7 @@
     "material-ui-chip-input": "^0.16.0",
     "object-omit": "^1.0.0",
     "parse-dms": "^0.0.3",
-    "prettier": "^1.4.4",
+    "prettier": "^1.7.0",
     "prop-types": "^15.5.10",
     "properties-parser": "^0.3.1",
     "q-io": "^1.13.4",
@@ -95,12 +95,9 @@
     "archivestage": "zip -r archive/stage-$(date -u +%FT%TZ) build",
     "deployprod": "surge -p build -d https://participedia.xyz",
     "deploystage": "surge -p build -d https://ppedia.surge.sh",
-    "buildprod":
-      "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
-    "buildstage":
-      "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
-    "builddev":
-      "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt",
+    "buildprod": "cp .envprod .env  && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archiveprod; cp .envdev .env",
+    "buildstage": "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
+    "builddev": "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && node scripts/properties2json && echo $(date -u +%FT%TZ) > build/VERSION.txt",
     "rollbackto": "f(){ rm -rf build && unzip archive/${1}; }; f",
     "test": "react-scripts test --env=jsdom",
     "lint": "eslint \"src/**/**.js\"",
@@ -111,7 +108,10 @@
     "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "pre-commit": "lint-staged"
 }
