Get rid of emoji from twitter names (ouch)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "create-react-class": "^15.6.0",
     "draft-js": "^0.10.3",
     "draftjs-to-html": "^0.7.6",
+    "emoji-strip": "^1.0.1",
     "geojson-extent": "^0.3.2",
     "geojson2svg": "^1.2.1",
     "habitat": "^3.1.2",
@@ -62,7 +63,7 @@
     "query-parser": "^0.0.1",
     "query-string": "^5.0.0",
     "quill": "^1.2.5",
-    "raven-js": "^3.16.0",
+    "raven-js": "^3.20.1",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-shallow-compare": "^15.5.2",
