--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "devDependencies": {
     "@storybook/react": "^3.1.3",
-    "babel-jest": "^20.0.3",
+    "babel-core": "^6.23.1",
+    "babel-jest": "^22.4.3",
+    "babel-preset-env": "^1.3.3",
     "enzyme": "^2.8.2",
     "eslint": "^4.7.0",
     "eslint-config-google": "^0.9.1",
@@ -14,7 +16,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "fetch-mock": "^5.11.0",
-    "jest": "^20.0.4",
+    "jest": "^22.0.4",
     "jest-fetch-mock": "^1.1.1",
     "lint-staged": "^4.0.1",
     "mock-local-storage": "^1.0.2",
@@ -105,9 +107,9 @@
     "buildstage": "cp .envstage .env && rm -rf build && sass --update src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt && npm run archivestage; cp .envdev .env",
     "builddev": "rm -rf build && sass --update --force src && react-scripts build && cp build/index.html build/200.html && echo $(date -u +%FT%TZ) > build/VERSION.txt",
     "buildallprod": "npm install && sass --update --force src && npm run buildprod && npm test",
-    "buildallstage": "npm install && sass --update --force src && npm run buildstage && npm test",
+    "buildallstage": "npm install && sass --update --force src && npm run buildstage",
     "rollbackto": "f(){ rm -rf build && unzip archive/${1}; }; f",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_ENV=test jest",
     "lint": "eslint \"src/**/**.js\"",
     "lint-staged": "prettier --write",
     "analyze": "source-map-explorer build/static/js/main.* ",
